@@ -19,6 +19,10 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 
 - CI Release name
 
+## Deprecated
+
+- DMT.core.naming.set_col_name deprecated as SpecifierStr creation is much better documented.
+
 ## [1.6.2] - 2022.06.14
 
 ### Fixed
